# Style-Seeker-AI

./: .backend.env  .backend.env.example  .env.example  .gitignore  Dockerfile  Dockerfile.base  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: build-base-image.yml  main.yml
backend/: .env.example  Dockerfile  Dockerfile.base  pyproject.toml
backend/.github/workflows/: build-release.yml
backend/client/static/js/: script.js
backend/data_pipeline/services/prefect_tasks/: json_reader.py
backend/search/: serializers.py
backend/style_seeker_ai/: settings.py  urls.py
client/: views.py
client/static/css/: styles.css
client/static/js/: script.js
client/templates/: main_page.html
data_pipeline/: tasks.py  views.py
data_pipeline/services/prefect_tasks/: img_internaler.py  index_data.py
llm_chat/: serializers.py  views.py
llm_chat/management/commands/: telegram_bot.py
llm_chat/services/: llm_chat_actor.py
search/: utils.py  views.py
search/services/: meilisearch_searcher.py
style_seeker_ai/: asgi.py  settings.py  urls.py  wsgi.py
